--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "yargs": "^4.6.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
         "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
         "popper.js": "^1.14.4"
